Update semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -11,3 +11,5 @@ blocks:
         - name: 'Job #1'
           commands:
             - checkout
+            - echo "something" > /tmp/somefile.txt
+            - artifact push job somefile.txt -v
